src/styles/Map.css
.meetup-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 50px auto 100px auto;
    width: 90%;
    max-width: 2000px;
    background: #222;
    padding: 30px 20px;
    border-radius: 20px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
}

.meetup-container .header {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 9px;
    width: 100%;
    margin-top: 10px;
}

.meetup-container .text {
    color: #D9D9D9;
    font-size: 24px;
    font-weight: 700;
}

.meetup-container .underline {
    width: 50px;
    height: 6px;
    background: #222;
    border-radius: 9px;
}

.action-button {
    display: flex;
    justify-content: center;
    margin: 20px 0;
}

.primary-button {
    background-color: #222;
    cursor: pointer;
    font-size: 18px;
    font-weight: 600;
    color: #D9D9D9;
    padding: 10px 20px;
    border-radius: 15px;
    text-decoration: none;
    display: inline-block;
    transition: background-color 0.3s ease, color 0.3s ease;
    border: 2px solid #f97316;
}

.primary-button:hover {
    background-color: #f97316;
    color: #D9D9D9;
    text-decoration: none;
}

.meetup-container .inputs {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 90%;
    gap: 6px;
}

.meetup-container .input {
    display: flex;
    align-items: center;
    min-width: 350px;
    min-height: 40px;
    background: #D9D9D9;
    border-radius: 6px;
    margin: auto;
}

.meetup-container .input input {
    width: 100%;
    height: 50px;
    background: transparent;
    border: none;
    outline: none;
    color: #D9D9D9;
    font-size: 19px;
}

.meetup-container .submit-container {
    display: flex;
    width: 90%;
    flex-wrap: wrap;
    gap: 6px;
    margin: 6px;
    justify-content: center;
}

.meetup-container .submit {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 16%;
    height: 50px;
    color: #D9D9D9;
    background: #222;
    border-radius: 50px;
    font-size: 16px;
    font-weight: 700;
    cursor: pointer;
    border: 2px solid #f97316;
    transition: background-color 0.3s ease, color 0.3s ease;
}

.meetup-container .submit:hover {
    background-color: #f97316;
}

.meetup-container .submit.gray {
    background: #D9D9D9;
    color: #676767;
}

.meetup-container .account-link {
    width: 100%;
    text-align: center;
    color: #D9D9D9;
}

.text-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    text-align: center;
    width: 100%;
    max-width: 800px;
    margin: 6px;
    gap: 10px;  
}

.text-container .text {
    font-size:20px;
}

.map-container{
    background: #222;
    color: #D9D9D9;
    border-radius: 20px;
    padding: 20px;
    flex: 1;
    width: 90%;
    min-width: 400px;
    border: 2px solid #f97316;
}

